rocket/measurements/verilator-large-v1.6-O3/sim-perf.txt
START: Current timestamp in milliseconds: 1731323122049
GROUP: verilator SUBGROUP: firtool COMMAND: firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-O3-simperf//rocket.fir -o /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-O3-simperf//rocket.sv
/home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-O3-simperf//rocket.fir:1:1: error: expected 'FIRRTL'
circuit RocketSystem :
^

 Performance counter stats for '/usr/local/bin/firtool --lowering-options=disallowLocalVariables /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-O3-simperf//rocket.fir -o /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-O3-simperf//rocket.sv':

             21.32 msec task-clock:u                     #    0.985 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             2,345      page-faults:u                    #  110.004 K/sec                     
         8,331,910      cycles:u                         #    0.391 GHz                         (10.12%)
         4,689,290      stalled-cycles-frontend:u        #   56.28% frontend cycles idle        (24.05%)
       136,637,199      instructions:u                   #   16.40  insn per cycle            
                                                  #    0.03  stalled cycles per insn     (38.12%)
        26,945,516      branches:u                       #    1.264 G/sec                       (52.15%)
           424,649      branch-misses:u                  #    1.58% of all branches             (66.23%)
        60,085,133      L1-dcache-loads:u                #    2.819 G/sec                       (70.18%)
         5,653,306      L1-dcache-load-misses:u          #    9.41% of all L1-dcache accesses   (70.32%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
         1,000,602      L1-icache-loads:u                #   46.938 M/sec                       (61.88%)
             9,674      L1-icache-load-misses:u          #    0.97% of all L1-icache accesses   (47.85%)
           152,528      dTLB-loads:u                     #    7.155 M/sec                       (33.77%)
            15,251      dTLB-load-misses:u               #   10.00% of all dTLB cache accesses  (19.70%)
             1,225      iTLB-loads:u                     #   57.465 K/sec                       (5.63%)
     <not counted>      iTLB-load-misses:u                                                      (0.00%)
     <not counted>      L1-dcache-prefetches:u                                                  (0.00%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.021640731 seconds time elapsed

       0.014379000 seconds user
       0.007201000 seconds sys


Some events weren't counted. Try disabling the NMI watchdog:
	echo 0 > /proc/sys/kernel/nmi_watchdog
	perf stat ...
	echo 1 > /proc/sys/kernel/nmi_watchdog
GROUP: verilator SUBGROUP: verilator
%Error: Cannot find file containing module: '/home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-O3-simperf/rocket.sv'
%Error: This may be because there's no search path specified with -I<dir>.
        ... Looked in:
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-O3-simperf/rocket.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-O3-simperf/rocket.sv.v
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-O3-simperf/rocket.sv.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-O3-simperf/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-O3-simperf/rocket.sv
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-O3-simperf/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-O3-simperf/rocket.sv.v
             /home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-O3-simperf/rocket-vtor//home/bea/Research/paper-evals/arc-tests/rocket/./build/verilator-large-v1.6-O3-simperf/rocket.sv.sv
%Error: Exiting due to 2 error(s)

 Performance counter stats for '/usr/bin/verilator -O3 --noassert --x-assign fast --x-initial fast --threads 1 -sv -cc -Mdir /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-O3-simperf//rocket-vtor /home/bea/Research/paper-evals/arc-tests/rocket//./build/verilator-large-v1.6-O3-simperf//rocket.sv /home/bea/Research/paper-evals/arc-tests/rocket/../verilator-stubs.sv -j 0 -DPRINTF_COND=0 -DASSERT_VERBOSE_COND=0 -DSTOP_COND=0 -Wno-WIDTH':

             65.08 msec task-clock:u                     #    1.562 CPUs utilized             
                 0      context-switches:u               #    0.000 /sec                      
                 0      cpu-migrations:u                 #    0.000 /sec                      
             4,223      page-faults:u                    #   64.888 K/sec                     
       140,262,840      cycles:u                         #    2.155 GHz                         (59.77%)
        19,025,284      stalled-cycles-frontend:u        #   13.56% frontend cycles idle        (59.82%)
        95,197,251      instructions:u                   #    0.68  insn per cycle            
                                                  #    0.20  stalled cycles per insn     (55.06%)
        75,212,561      branches:u                       #    1.156 G/sec                       (17.87%)
         1,796,811      branch-misses:u                  #    2.39% of all branches             (39.89%)
       102,877,842      L1-dcache-loads:u                #    1.581 G/sec                       (44.70%)
         2,236,640      L1-dcache-load-misses:u          #    2.17% of all L1-dcache accesses   (44.73%)
   <not supported>      LLC-loads:u                                                           
   <not supported>      LLC-load-misses:u                                                     
        28,073,003      L1-icache-loads:u                #  431.353 M/sec                       (44.63%)
           445,942      L1-icache-load-misses:u          #    1.59% of all L1-icache accesses   (44.63%)
           562,519      dTLB-loads:u                     #    8.643 M/sec                       (44.56%)
            19,246      dTLB-load-misses:u               #    3.42% of all dTLB cache accesses  (44.47%)
           716,996      iTLB-loads:u                     #   11.017 M/sec                       (48.38%)
            12,373      iTLB-load-misses:u               #    1.73% of all iTLB cache accesses  (65.28%)
           797,157      L1-dcache-prefetches:u           #   12.249 M/sec                       (62.19%)
   <not supported>      L1-dcache-prefetch-misses:u                                           

       0.041675141 seconds time elapsed

       0.033363000 seconds user
       0.031551000 seconds sys


GROUP: verilator SUBGROUP: clang
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
Workload failed: No such file or directory
